# wpart

./: .gitignore  CMakeLists.txt  bulkfix.m  calc_penetration.m  exampletomo.m  fixbands.m  gatherSubsets.m  labels16to8.m  main.cpp  segmentSubsets.m  testtomo.m  tomography.m  woodPart.m  woodPartcrack.m  wpart.cpp
include/: params.hpp~  parse.hpp  stack.hpp
preprocess/: imnamestack.m  imstackload.m  imstacksave.m  makeSubset.m  rescale.m
segment/: affine_fit.m  calc_penetration.m  checklabels.m  findThresholds.m  getlabels.m  removeislands.m  woodmap.m
visualize/: makeobj.m  makeply.m  mapTo256.m  mapToColor.m  woodcolor.m
